# Erlin-Rey-TP3

./: .gitignore  CLAUDE.md  GLOBAL-CLAUDE.md  README.md  openapi.yaml  presentar.bat  pyproject.toml  start.bat
.claude/: settings.json
.claude/rules/: backend.md  frontend.md  scripts.md
.claude/skills/generar-senal/: SKILL.md
.claude/skills/tecnico/: SKILL.md
TP1/: Link Gemini.txt  README.md  index.html  prompts.md
TP2/: README.md  openapi.yaml  prompts.md
backend/: database.py  main.py  models.py
data/: cedears.json
docs/endpoints/: endpoints.md
docs/superpowers/plans/: 2026-06-13-backend-api.md  2026-06-13-frontend-dashboard.md  2026-06-13-scripts-analisis.md  2026-06-15-ampliacion-mercado-detalle.md  2026-06-17-score-tecnico-cartera-on-demand.md
docs/superpowers/specs/: 2026-06-12-dashboard-activos-financieros-design.md  2026-06-15-ampliacion-mercado-detalle-design.md  2026-06-17-score-tecnico-cartera-on-demand-design.md
frontend/: index.html
presentacion/: presentacion-final.html  presentacion.html
propuesta/: Ampliacion de funciones.md  planificacion-del-proyecto.md  presentacion-propuesta.html
scripts/: generar_senal.py  historico.py  indicators.py  mercado.py  prices.py  score_tecnico.py  seed.py
tests/: conftest.py  test_api.py  test_historico.py  test_indicators.py  test_mercado.py  test_mercado_script.py  test_models.py  test_prices.py  test_score_tecnico.py
